--- a/Proyectoint/Pages/Index.cshtml
+++ b/Proyectoint/Pages/Index.cshtml
@@ -5,7 +5,44 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="card-deck">
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Registrar candidato</h5>
+                <p class="card-text">Aqui se registraran los candidatos</p>
+            </div>
+            <div class="card-footer">
+                <a asp-page="/" class="btn btn-primary">Seleccionar</a>
+            </div>
+        </div>
+        <div class="card">
+            
+            <div class="card-body">
+                <h5 class="card-title">Candidatos</h5>
+                <p class="card-text">Aqui se veran las odenes con los datos de los candiatos</p>
+            </div>
+            <div class="card-footer">
+                <a asp-page="/" class="btn btn-primary">Seleccionar</a>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Lista de empresas</h5>
+                <p class="card-text">Aqui se veran las empresas para las que laboramos</p>
+            </div>
+            <div class="card-footer">
+                <a href="#" class="btn btn-primary">Seleccionar</a>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Registrar Empresa</h5>
+                <p class="card-text">Aqui se registraran nuevas empresas</p>
+            </div>
+            <div class="card-footer">
+                <a href="#" class="btn btn-primary">Seleccionar</a>
+            </div>
+        </div>
+
+    </div>
