--- a/Proyectoint/Pages/Index.cshtml
+++ b/Proyectoint/Pages/Index.cshtml
@@ -1,48 +1,31 @@
 ﻿
 @page
-@model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+
 }
 
-    <div class="card-deck">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registrar candidato</h5>
-                <p class="card-text">Aqui se registraran los candidatos</p>
-            </div>
-            <div class="card-footer">
-                <a asp-page="/" class="btn btn-primary">Seleccionar</a>
-            </div>
-        </div>
-        <div class="card">
-            
-            <div class="card-body">
-                <h5 class="card-title">Candidatos</h5>
-                <p class="card-text">Aqui se veran las odenes con los datos de los candiatos</p>
-            </div>
-            <div class="card-footer">
-                <a asp-page="/" class="btn btn-primary">Seleccionar</a>
-            </div>
-        </div>
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Lista de empresas</h5>
-                <p class="card-text">Aqui se veran las empresas para las que laboramos</p>
-            </div>
-            <div class="card-footer">
-                <a href="#" class="btn btn-primary">Seleccionar</a>
-            </div>
-        </div>
+<!DOCTYPE html>
 
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">Registrar Empresa</h5>
-                <p class="card-text">Aqui se registraran nuevas empresas</p>
-            </div>
-            <div class="card-footer">
-                <a href="#" class="btn btn-primary">Seleccionar</a>
-            </div>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Login</title>
+
+
+</head>
+<body>
+    <div class="login-page">
+        <div class="form">
+            <form class="login-form">
+                <label>Usuario</label>
+                <input id="txtUsuario" type="text" placeholder="Nombre de usuario" />
+                <label>Contraseña</label>
+                <input id="txtContraseña" type="password" placeholder="Contraseña" />
+                <button class="btn btn-primary" asp-page="/Menu">Entrar</button>
+            </form>
+
         </div>
 
     </div>
+</body>
+</html>
