--- a/Proyectoint/Pages/Inicio.cshtml
+++ b/Proyectoint/Pages/Inicio.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @{
-
+     
 }
 
 <!DOCTYPE html>
@@ -17,9 +17,9 @@
         <div class="form">
             <form class="login-form">
                 <label>Usuario</label>
-                <input id="txtUsuario" type="text" placeholder="Nombre de usuario" />
+                <input id="Usuario" type="text" placeholder="Nombre de usuario" />
                 <label>Contraseña</label>
-                <input id="txtContraseña" type="password" placeholder="Contraseña" />
+                <input id="Contraseña" type="password" placeholder="Contraseña" />
                 <button class="btn btn-primary" asp-page="/Index">Entrar</button>
             </form>
 
