--- a/Proyectoint/Pages/Index.cshtml
+++ b/Proyectoint/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @page
 @{
-
+    Layout = "_Layout";
 }
 
 <!DOCTYPE html>
@@ -11,16 +11,15 @@
     <meta charset="utf-8" />
     <title>Login</title>
 
-
 </head>
 <body>
     <div class="login-page">
         <div class="form">
             <form class="login-form">
                 <label>Usuario</label>
-                <input id="txtUsuario" type="text" placeholder="Nombre de usuario" />
+                <input id="Nombre_Usuario" type="text" placeholder="Nombre de usuario" />
                 <label>Contraseña</label>
-                <input id="txtContraseña" type="password" placeholder="Contraseña" />
+                <input id="Contraseña" type="password" placeholder="Contraseña" />
                 <button class="btn btn-primary" asp-page="/Menu">Entrar</button>
             </form>
 
