--- a/Proyectoint/Pages/Menu.cshtml
+++ b/Proyectoint/Pages/Menu.cshtml
@@ -32,4 +32,14 @@
             <a asp-page="/CRUD_Empresa/Index" class="btn btn-primary">Seleccionar</a>
         </div>
     </div>
+    <div class="card">
+        <div class="card-body">
+            <h5 class="card-title">Historial laboral</h5>
+            <p class="card-text">Aqui se encontraran los Historiales Laborales de los candidatos</p>
+        </div>
+        <div class="card-footer">
+            <a asp-page="/Histo/Index" class="btn btn-primary">Seleccionar</a>
+        </div>
+    </div>
 </div>
+
