--- a/Proyectoint/Pages/Menu.cshtml
+++ b/Proyectoint/Pages/Menu.cshtml
@@ -11,7 +11,7 @@
             <p class="card-text">Aqui se veran los candidatos</p>
         </div>
         <div class="card-footer">
-            <a asp-page="/CRUD_Candidato/Index" class="btn btn-primary">Seleccionar</a>
+            <a asp-page="/Candidato/Index" class="btn btn-primary">Seleccionar</a>
         </div>
     </div>
     <div class="card">
