--- a/Proyectoint/Pages/Candidato/Index.cshtml
+++ b/Proyectoint/Pages/Candidato/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@page
 @model Proyectoint.Pages.Candidato.IndexModel
 
+
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>Index</h1>
+<h1>Blazor PDF</h1>
 
 <p>
     <a asp-page="Create">Create New</a>
